<resources>
    <string name="app_name">UTSAndroid</string>
    <string name="teknologi_rpl_informatika">TEKNOLOGI RPL [Informatika]</string>
    <string name="visi_trpl_menjadi_pengembangan_pendidikan_vokasi_terdepan_dalam_kawasan_regional_untuk_komunitas_industri_guna_memenuhi_kebutuhan_tenaga_teknis_yang_kompeten_di_bidang_rekayasa_perangkat_lunak">Visi TRPL: “Menjadi pengembangan pendidikan vokasi terdepan dalam kawasan regional untuk komunitas industri guna memenuhi kebutuhan tenaga teknis yang kompeten di bidang Rekayasa Perangkat Lunak”</string>
    <string name="wujudkan_cita_citamu_untuk_menjadi_software_engineer_yang_dibutuhkan_banyak_industri_dan_memiliki_gaji_yang_tinggi_sesuai_dengan_permintaan">Wujudkan cita-citamu untuk menjadi Software Engineer yang dibutuhkan banyak industri dan memiliki gaji yang tinggi sesuai dengan permintaan.</string>
    <string name="_1_menyelenggarakan_pendidikan_vokasi_untuk_menghasilkan_lulusan_yang_kompeten_di_bidang_software_engineering_yang_berkualitas_dan_mampu_beradaptasi_dengan_perkembangan_teknologi_dan_dunia_industri_2_melaksanakan_penelitian_terapan_untuk_mengembangkan_pengetahuan_dan_inovasi_rekayasa_perangkat_lunak_sesuai_dengan_perkembangan_zaman_dan_teknologi_3_menyebarluaskan_pengetahuan_dan_hasil_penelitian_kepada_masyarakat_luas_untuk_meningkatkan_kualitas_kehidupan">: 1) Menyelenggarakan pendidikan vokasi untuk menghasilkan lulusan yang kompeten di bidang software engineering yang berkualitas dan mampu beradaptasi dengan perkembangan teknologi dan dunia industri. 2) Melaksanakan penelitian terapan untuk mengembangkan pengetahuan dan inovasi Rekayasa Perangkat Lunak sesuai dengan perkembangan zaman dan teknologi. 3) Menyebarluaskan pengetahuan dan hasil penelitian kepada masyarakat luas untuk meningkatkan kualitas kehidupan.</string>
    <string name="misi">Misi</string>
    <string name="_1_menghasilkan_lulusan_yang_berkarakter_dan_berkualitas_baik_yang_mampu_bersaing_dan_beradaptasi_dengan_perkembangan_teknologi_2_menghasilkan_inovasi_teknologi_rekayasa_perangkat_lunak_terbarukan_yang_dapat_digunakan_di_berbagai_kalangan_masyarakat_3_menghasilkan_layanan_dan_dampak_positif_dari_pengembangan_inovasi_teknologi_rekayasa_perangkat_lunak_kepada_masyarakat_umum">: 1) Menghasilkan lulusan yang berkarakter dan berkualitas baik yang mampu bersaing dan beradaptasi dengan perkembangan teknologi. 2) Menghasilkan inovasi Teknologi Rekayasa Perangkat Lunak terbarukan yang dapat digunakan di berbagai kalangan masyarakat. 3) Menghasilkan layanan dan dampak positif dari pengembangan inovasi teknologi rekayasa perangkat lunak kepada masyarakat umum.</string>
    <string name="tujuan">Tujuan</string>
    <string name="kompetensi_utama">Kompetensi Utama</string>
    <string name="kompetensi_pendukung">Kompetensi Pendukung</string>
    <string name="kompetensi_lainnya">Kompetensi Lainnya</string>
    <string name="untuk_mendapatkan">Untuk mendapatkan</string>
    <string name="kamu_bakal_bisa_apa">kamu bakal bisa apa?</string>
    <string name="trpl_pei">TRPL PEI</string>
    <string name="lulus_dari">Lulus dari</string>
    <string name="diatas_maka_kamu_akan_belajar_ini">diatas, maka kamu akan belajar ini:</string>
    <string name="kompetensi">kompetensi</string>
    <string name="pengetahuan_dasar_it_programming"><![CDATA[Pengetahuan Dasar IT & Programming]]></string>
    <string name="pengantar_lunak_aplikasi_pemrograman_dasar_struktur_data_pemrograman_berorientasi_objek_sistem_basis_data_sistem_operasi_perancangan_ui_ux">Pengantar Lunak Aplikasi; Pemrograman Dasar; Struktur Data; Pemrograman Berorientasi Objek; Sistem Basis Data; Sistem Operasi; Perancangan UI/UX.</string>
    <string name="android_programming">Android Programming</string>
    <string name="activity_intent_layout_style_theme_list_recycle_view_navigation_background_process_networking_restful_api_viewmodel_livedata_testing_local_data_persistent_background_task_schheduler_basic_flutter"><![CDATA[Activity & Intent; Layout; Style & Theme; List & Recycle View; Navigation; Background Process & Networking; Restful API; ViewModel & LiveData; Testing; Local Data Persistent; Background Task & Schheduler; Basic Flutter.]]></string>
    <string name="web_design_programming"><![CDATA[Web Design & Programming]]></string>
    <string name="html_css_java_script_bootstrap_php_mysql_laravel_vue_js_react_js">HTML; CSS; Java Script; Bootstrap; PHP; MySql; Laravel; Vue.JS/React.JS.</string>
    <string name="cyber_security_computer_network"><![CDATA[Cyber Security & Computer Network]]></string>
    <string name="dasar_keamanan_komputer_keamanan_perangkat_lunak_keamanan_basis_data_komunikasi_data_jaringan_sistem_terdistribusi_cloud_computing"><![CDATA[Dasar Keamanan Komputer; Keamanan Perangkat Lunak; Keamanan Basis Data; Komunikasi Data & Jaringan; Sistem Terdistribusi; Cloud Computing.]]></string>
    <string name="rekayasa_perangkat_lunak">Rekayasa Perangkat Lunak</string>
    <string name="pengantar_rekayasa_perangkat_lunak_analisis_desain_perangkat_lunak_pengujian_perangkat_lunak_manajemen_proyek"><![CDATA[Pengantar Rekayasa Perangkat Lunak; Analisis & Desain Perangkat Lunak; Pengujian Perangkat Lunak; Manajemen Proyek.]]></string>
    <string name="math_data_processing"><![CDATA[Math & Data Processing]]></string>
    <string name="kalkulus_aljabar_linear_matematika_diskrit_statistik_data_mining">Kalkulus; Aljabar Linear; Matematika Diskrit; Statistik; Data Mining.</string>
    <string name="success_skill">Success Skill</string>
    <string name="teknik_presentasi_manajemen_kearsipan_etika_profesi_technopreneur_magang_internship_tugas_akhir_projek_akhir">Teknik Presentasi; Manajemen kearsipan;Etika Profesi; Technopreneur; Magang/Internship; Tugas Akhir / Projek Akhir,</string>
    <string name="english">English</string>
    <string name="vocabulary_reading_speaking_listening_grammar_writing_english_fo_career_toeic">Vocabulary; Reading; Speaking; Listening; Grammar; Writing; English fo Career; TOEIC.</string>
    <string name="lihat_kurikulum">Lihat Kurikulum</string>
    <string name="tim">Tim</string>
    <string name="pengajar">Pengajar</string>
    <string name="sesuai_dengan_bidang_keahliannya">Sesuai dengan Bidang Keahliannya:</string>
    <string name="musawarman_s_kom_m_m_s_i">Musawarman, S.Kom, M.M.S.I.</string>
    <string name="s1_institut_pertanian_bogor_s2_universitas_gunadarma_jakarta">[S1 – Institut Pertanian Bogor][S2 – Universitas Gunadarma, Jakarta]</string>
    <string name="muhammad_nugraha_s_t_m_eng">Muhammad Nugraha S.T., M.Eng</string>
    <string name="s1_universitas_ahmad_dahlan_yogyakarta_s2_chonnam_national_university_korea_selatan">[S1 – Universitas Ahmad Dahlan Yogyakarta][S2 – Chonnam National University, Korea Selatan]</string>
    <string name="ricak_agus_setiawan_s_t_m_si">Ricak Agus Setiawan S.T., M.Si</string>
    <string name="s1_stmik_bandung_s2_stmik_putera_batam">[S1 – STMIK Bandung][S2 – STMIK Putera Batam]</string>
    <string name="halimil_fathi_s_kom_m_kom">Halimil Fathi S.Kom., M.Kom</string>
    <string name="s1_stt_wastu_kancana_purwakarta_s2_stmik_likmi_bandung">[S1 – STT Wastu Kancana Purwakarta][S2 – STMIK LIKMI Bandung]</string>
    <string name="widya_andayani_rahayu_s_pd_m_pd">Widya Andayani Rahayu S.Pd., M.Pd</string>
    <string name="s1_stkip_subang_s2_universitas_indraprasta_pgri">[S1 – STKIP Subang][S2 – Universitas Indraprasta PGRI]</string>
    <string name="heti_mulyani_s_t_m_kom">Heti Mulyani S.T., M.Kom</string>
    <string name="s1_stmik_bandung_s2_institut_pertanian_bogor">[S1 – STMIK Bandung][S2 – Institut Pertanian Bogor]</string>
    <string name="sukrina_herman_s_kom_m_kom">Sukrina Herman S.Kom., M.Kom</string>
    <string name="s1_telkom_university_s2_stimik_likmi_bandung">[S1-Telkom University][S2-STIMIK LIKMI Bandung]</string>
    <string name="fasilitas_belajar_lengkap_dan_nyaman">Fasilitas Belajar Lengkap dan Nyaman</string>
    <string name="kampus_berada_di_lingkungan_yang_jauh_dari_keramaian_dan_masih_asri">Kampus berada di lingkungan yang jauh dari keramaian dan masih asri.</string>
    <string name="mahasiswa_senang_kuliah_di_prodi">Mahasiswa Senang Kuliah di Prodi</string>
    <string name="trp_pei">TRP PEI</string>
    <string name="pengalaman_saya_selama_kuliah_di_pei_saya_mendapatkan_ilmu_yang_saya_sukai_seperti_mendesain_aplikasi_dan_pemrograman_dengan_metode_pembelajaran_yang_lebih_banyak_praktek_membuat_saya_tidak_bosan_belajar_dikelas">Pengalaman saya selama kuliah di PEI saya mendapatkan ilmu yang saya sukai, seperti mendesain aplikasi dan pemrograman. Dengan metode pembelajaran yang lebih banyak praktek membuat saya tidak bosan belajar dikelas.</string>
    <string name="saya_senang_kuliah_di_pei_karena_fasilitas_lab_disini_sangat_lengkap_sehingga_proses_pembelajaran_dapat_dilakukan_dengan_maksimal">Saya senang kuliah di PEI karena fasilitas lab disini sangat lengkap sehingga proses pembelajaran dapat dilakukan dengan maksimal.</string>
    <string name="muhammad_daris_trpl_21">Muhammad Daris – TRPL ’21</string>
    <string name="dina_armei_trpl_21">Dina Armei – TRPL ’21</string>
    <string name="saya_sangat_senang_kuliah_pei_karena_dosen_nya_baik_dan_selalu_membantu_saya_ketika_menghadapi_kesulitan_dalam_pembelajaran_selain_itu_dosennya_juga_sangat_berkopenten_dalam_bidangnya_masing_masing">Saya sangat senang kuliah PEI karena dosen- nya baik dan selalu membantu saya ketika menghadapi kesulitan dalam pembelajaran. Selain itu dosennya juga sangat berkopenten dalam bidangnya masing-masing</string>
    <string name="prospek_kerja">Prospek Kerja</string>
    <string name="no">No</string>
    <string name="profesi_kerja">Profesi Kerja</string>
    <string name="estimasi_gaji">Estimasi Gaji</string>
    <string name="referensi">Referensi</string>
    <string name="_1">1</string>
    <string name="web_developer_full_stack">Web Developer (Full Stack)</string>
    <string name="_11_jt_25_jt">11 jt – 25 jt</string>
    <string name="kompas">Kompas</string>
    <string name="_2">2</string>
    <string name="front_end">Front End</string>
    <string name="_9_jt_28_jt">9 jt – 28 jt</string>
    <string name="kompas1">Kompas</string>
    <string name="_3">3</string>
    <string name="back_end">Back End</string>
    <string name="_13_jt_30_jt">13 jt – 30 jt</string>
    <string name="_4">4</string>
    <string name="system_analyst">System Analyst</string>
    <string name="_9_jt_12_jt">9 jt – 12 jt</string>
    <string name="indeed">indeed</string>
    <string name="_5">5</string>
    <string name="mobile_developer">Mobile Developer</string>
    <string name="_7_3_jt_41_jt">7,3 jt – 41 jt</string>
    <string name="glints">Glints</string>
    <string name="mitra_kami">Mitra Kami</string>
    <string name="welcome_to_trpl">welcome to TRPL</string>
    <string name="gambarlogin1">gambarlogin1</string>
    <string name="gambarlogin2">gambarlogin2</string>
    <string name="gambarrectangle">gambarrectangle</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_in">Log in</string>
    <string name="not_have_an_account">Not have an account?</string>
    <string name="register">  Register</string>
    <string name="gambarrpl">gambarrpl</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="get_things_done_with_trpl">Get Things done with TRPL</string>
    <string name="let_s_help_you_meet_up_your_tasks">Let’s help you meet up your tasks.</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="create_password">Create Password</string>
    <string name="already_have_an_account">Already have an account?</string>
</resources>