<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gambar10"
        android:id="@+id/login_image1"
        android:contentDescription="@string/gambarlogin1"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/login_image2"
        android:contentDescription="@string/gambarlogin2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_trpl"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:fontFamily="@font/poppinsbold"
        android:textColor="@color/black"
        android:layout_below="@+id/login_image1"
        android:id="@+id/login_txt1"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:src="@drawable/rectangle"
        android:contentDescription="@string/gambarrectangle"
        android:layout_below="@+id/login_txt1"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gambar11"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/gambarlogin1"
        android:layout_below="@+id/login_txt1"
        android:id="@+id/login_image3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:paddingTop="35dp"
        android:paddingBottom="20dp"
        android:layout_below="@+id/login_image3"
        android:id="@+id/login_layout1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_green"
            android:hint="@string/enter_your_name"
            android:backgroundTint="@color/white"
            android:textSize="15sp"
            android:paddingLeft="20dp"
            android:fontFamily="@font/poppinsregular"
            android:id="@+id/login_edittxt1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_green"
            android:hint="@string/confirm_password"
            android:backgroundTint="@color/white"
            android:textSize="15sp"
            android:paddingLeft="20dp"
            android:fontFamily="@font/poppinsregular"
            android:id="@+id/login_edittxt2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/greenThird"
            android:id="@+id/login_txt2"/>

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:width="300dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/poppinsbold"
        android:background="@drawable/button_green"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_layout1"
        android:id="@+id/login_btn1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/login_btn1"
        android:id="@+id/login_layout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_have_an_account"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="@font/poppinsregular"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="12sp"
            android:text="@string/register"
            android:fontFamily="@font/poppinssemibold"
            android:textColor="@color/greenThird"
            android:id="@+id/login_txt3"/>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rpl"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/gambarrpl"
        android:layout_below="@+id/login_layout2"/>

</RelativeLayout>