<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashArt">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gambar10"
        android:id="@+id/splashart_image1"
        android:contentDescription="@string/gambarlogin1"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:src="@drawable/trpl"
        android:layout_below="@+id/splashart_image1"
        android:layout_centerHorizontal="true"
        android:id="@+id/splashart_image2"
        android:contentDescription="@string/gambarlogin1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splashart_image2"
        android:text="@string/get_things_done_with_trpl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppinssemibold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:id="@+id/splashart_txt1" />

    <TextView
        android:id="@+id/splashart_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splashart_txt1"
        android:gravity="center"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/wujudkan_cita_citamu_untuk_menjadi_software_engineer_yang_dibutuhkan_banyak_industri_dan_memiliki_gaji_yang_tinggi_sesuai_dengan_permintaan"
        android:fontFamily="@font/poppinsregular"
        android:textColor="@color/black"
        android:maxWidth="500dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splashart_txt2"
        android:width="300dp"
        android:layout_marginTop="35dp"
        android:text="@string/log_in"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_green"
        android:textColor="@color/white"
        android:fontFamily="@font/poppinsbold"
        android:id="@+id/splashart_btn1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splashart_btn1"
        android:width="300dp"
        android:layout_marginTop="15dp"
        android:text="@string/register"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_green"
        android:textColor="@color/white"
        android:fontFamily="@font/poppinsbold"
        android:id="@+id/splashart_btn2"/>


</RelativeLayout>